# human-writing-skills

./: .gitignore  LICENSE  README.md  README.zh-CN.md  SKILL.md  pyproject.toml
agents/: openai.yaml
docs/: audit-pipeline.md  audit-pipeline.zh-CN.md  chatbox.md  chatbox.zh-CN.md  cool18-popular-fiction-research.md  cool18-popular-fiction-research.zh-CN.md  forum-complaint-research.md  forum-complaint-research.zh-CN.md  number-sense.md  number-sense.zh-CN.md  pattern-linter.md  pattern-linter.zh-CN.md  physical-continuity.md  physical-continuity.zh-CN.md  protected-content.md  protected-content.zh-CN.md  reference-style.md  reference-style.zh-CN.md  relationship-stance-continuity.md  relationship-stance-continuity.zh-CN.md
examples/: article-brief.md  capacity-conflict-draft.zh-CN.md  capacity-ledger-template.md  chatbox-ledger-template.md  deep-fiction-task.md  false-precision-draft.zh-CN.md  problem-car-scene-draft.md  problem-car-scene-draft.zh-CN.md  reference-style-draft.zh-CN.md  reference-style-source.zh-CN.md  relationship-stance-ledger.zh-CN.md  story-ledger.md  vehicle-scene-ledger.md
humanwriting/: __init__.py  cli.py  compiler.py  detection.py  linter.py  pipeline.py  protection.py  reference.py  skills.py
skills/: __init__.py  academic-paper.md  ai-trace-rubric.md  appearance-prop-continuity.md  argumentative.md  chapter-momentum-audit.md  character-consistency-audit.md  cliche-phrase-audit.md  controlled-drift.md  cultural-anchors.md  detail-disclosure-audit.md  dialogue-voice-audit.md  editor-loop.md  embodied-emotion.md  fiction.md  news-report.md  (+24 more)
(+5 files in other folders)
