[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "human-writing-skills"
version = "0.3.0"
description = "Markdown writing skills and a prompt compiler for natural, context-aware AI-assisted writing."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Human Writing Skills contributors" }]
keywords = ["writing", "skills", "prompting", "ai-writing", "long-context"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing",
]

[project.scripts]
human-writing-skills = "humanwriting.cli:main"

[tool.setuptools]
packages = ["humanwriting", "humanwriting_skill_data"]

[tool.setuptools.package-dir]
humanwriting_skill_data = "skills"

[tool.setuptools.package-data]
humanwriting_skill_data = ["*.md"]
